syntax = "proto3";

package auth;

option go_package = "github.com/grpc/proto";

// Auth service definition
service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
}

// Register messages
message RegisterRequest {
  string email = 1;
  string password = 2;
  string name = 3;
}

message RegisterResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  User user = 4;
}

// Login messages
message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
  User user = 4;
}

// GetProfile messages
message GetProfileRequest {
  string token = 1;
}

message GetProfileResponse {
  bool success = 1;
  string message = 2;
  User user = 3;
}

// User model
message User {
  uint32 id = 1;
  string email = 2;
  string name = 3;
  string created_at = 4;
  string updated_at = 5;
}
